# trading-simulator

./: CMakeLists.txt  README.md
data/: sample_data.csv
include/: TradingSimulator.hpp
src/: TradingSimulator.cpp  main.cpp
tests/: CMakeLists.txt  test_simulator.cpp
